fixed bugs introduced by post refactor

--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -850,7 +850,7 @@ nav {
     }
 
     li {
-      width: 90%;
+      width: 100%;
       padding: 15px 5%;
       text-align: left;
       display: flex;
@@ -1128,6 +1128,7 @@ nav {
   .dropdown {
     transition: all 0.3s ease-out;
     position: relative;
+		z-index: 200;
 
     &:hover {
       cursor: pointer;
