--- a/src/less/posts/about-author.less
+++ b/src/less/posts/about-author.less
@@ -7,6 +7,7 @@
   margin: 20px auto;
   justify-content: space-between;
   display: flex;
+  width: 100%;
   @media(max-width: @tablet-breakpoint) {
     margin: 20px 0;
   }
