--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -36,6 +36,7 @@
 			padding: 8px 10px;
 			font-family: @body-font;
 			border-radius: 2px;
+			font-weight: 300;
 			transition: all 0.3s ease-out;
 			@media(max-width: @tablet-breakpoint) {
 				margin-bottom: 10px;
