--- a/src/less/posts/nextprev.less
+++ b/src/less/posts/nextprev.less
@@ -40,9 +40,12 @@
         .info {
           margin-left: 30px;
           justify-content: flex-start;
-
           @media(max-width: @mobile-breakpoint) {
             margin-left: 10px;
+          }
+          
+          .prev-excerpt {
+            color: #5D6178;
           }
         }
       }
