--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -98,89 +98,91 @@
 		}
 	}
 
-	h2 {
-		margin: 40px 0 10px;
-		color: #555560;
-		line-height: 1.3;
-		font-family: 'ProductSans-Regular', sans-serif;
-		font-weight: 100!important;
-		font-size: 2em;
-		width: 100%;
-		@media(max-width: @tablet-breakpoint) {
-			font-size: 1.9em;
-		}
-		@media(max-width: @mobile-breakpoint) {
-			font-size: 1.7em;
-			text-align: left;
-			width: auto;
+	.post-content {
+		h2 {
+			margin: 40px 0 10px;
+			color: #555560;
 			line-height: 1.3;
-			font-weight: 500 !important;
-			border: none;
-			margin-bottom: 10px;
+			font-family: 'ProductSans-Regular', sans-serif;
+			font-weight: 100!important;
+			font-size: 2em;
+			width: 100%;
+			@media(max-width: @tablet-breakpoint) {
+				font-size: 1.9em;
+			}
+			@media(max-width: @mobile-breakpoint) {
+				font-size: 1.7em;
+				text-align: left;
+				width: auto;
+				line-height: 1.3;
+				font-weight: 500 !important;
+				border: none;
+				margin-bottom: 10px;
+			}
 		}
-	}
 
-	h3 {
-		font-size: 1.3em;
-		line-height: 1.2;
-		color: #555560;
-		margin: 40px 0 10px;
-		font-family: 'ProductSans-Regular', sans-serif;
-		@media(max-width: @tablet-breakpoint) {
+		h3 {
 			font-size: 1.3em;
+			line-height: 1.2;
+			color: #555560;
+			margin: 40px 0 10px;
+			font-family: 'ProductSans-Regular', sans-serif;
+			@media(max-width: @tablet-breakpoint) {
+				font-size: 1.3em;
+			}
+			@media(max-width: @mobile-breakpoint) {
+				text-align: left;
+				line-height: 1.3;
+				margin-bottom: 10px;
+				font-family: 'ProductSans-Medium', sans-serif;
+			}
 		}
-		@media(max-width: @mobile-breakpoint) {
+
+		h4 {
+			margin-bottom: 0;
+		}
+
+		li,
+		p {
 			text-align: left;
-			line-height: 1.3;
-			margin-bottom: 10px;
-			font-family: 'ProductSans-Medium', sans-serif;
-		}
-	}
-
-	h4 {
-		margin-bottom: 0;
-	}
-
-	li,
-	p {
-		text-align: left;
-		font-size: 1em;
-		color: #393a40;
-		font-weight: 300;
-		font-family: @body-font;
-		-webkit-font-smoothing: auto;
-		@media(max-width: @mobile-breakpoint) {
 			font-size: 1em;
-		}
-	}
-
-	a {
-		color: @theme-color;
-		transition: all 0.2s ease-out;
-		font-family: @body-font;
-		font-weight: 600;
-		@media(max-width: @mobile-breakpoint) {
-			white-space: nowrap;
-			overflow: hidden;
-			text-overflow: ellipsis;
-			max-width: 90%;
-			display: inline;
+			color: #393a40;
+			font-weight: 300;
+			font-family: @body-font;
+			-webkit-font-smoothing: auto;
+			@media(max-width: @mobile-breakpoint) {
+				font-size: 1em;
+			}
 		}
 
-		&:hover {
-			color: @secondary-color;
-		}
-	}
+		a {
+			color: @theme-color;
+			transition: all 0.2s ease-out;
+			font-family: @body-font;
+			font-weight: 600;
+			@media(max-width: @mobile-breakpoint) {
+				white-space: nowrap;
+				overflow: hidden;
+				text-overflow: ellipsis;
+				max-width: 90%;
+				display: inline;
+			}
 
-	p {
-		margin: 0 0 25px;
-		font-size: 1.05em;
-		line-height: 1.8em;
-		@media (max-width: 600px) {
-			text-align: left;
-			line-height: 1.8 !important;
-			font-style: normal;
-			font-size: 1em;
+			&:hover {
+				color: @secondary-color;
+			}
+		}
+
+		p {
+			margin: 0 0 25px;
+			font-size: 1.05em;
+			line-height: 1.8em;
+			@media (max-width: 600px) {
+				text-align: left;
+				line-height: 1.8 !important;
+				font-style: normal;
+				font-size: 1em;
+			}
 		}
 	}
 }
