refactored search styles

--- a/custom-transactional.hbs
+++ b/custom-transactional.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{lang}}" class="transactional">
+<html lang="{{@site.lang}}" class="transactional">
 
 <head>
 	{{! Document Settings }}
