native support for lazy load images

--- a/custom-tag-archive.hbs
+++ b/custom-tag-archive.hbs
@@ -22,8 +22,8 @@
 									<a href="/series/{{slug}}" title="{{name}}">
 										<div class="img-wrapper">
 											<picture>
-												<source media="(min-width: 1200px)" srcset="{{img_url feature_image size="medium"}} 1x, {{img_url feature_image size="medium_retina"}} 2x">
-												<img alt="{{title}}" class="lazy" src="{{img_url feature_image}}">
+												<source class="lazy" loading="lazy" media="(min-width: 1200px)" srcset="{{img_url feature_image size="medium"}} 1x, {{img_url feature_image size="medium_retina"}} 2x">
+												<img alt="{{title}}" class="lazy"  loading="lazy" src="{{img_url feature_image}}">
 											</picture>
 										</div>
 										<div class="description">
