--- a/page.hbs
+++ b/page.hbs
@@ -14,8 +14,8 @@
 					{{#if feature_image}}
 						<div class="featured-media">
 							<picture>
-								<source media="(min-width: 1200px)" srcset="{{img_url feature_image size="large"}} 1x, {{img_url feature_image size="large_retina"}} 2x">
-								<img alt="{{title}}" class="lazy" src="{{img_url feature_image}}">
+								<source alt="{{title}}" loading="lazy" class="lazy" media="(min-width: 1200px)" srcset="{{img_url feature_image size="large"}} 1x, {{img_url feature_image}} 2x">
+								<img alt="{{title}}" loading="lazy" class="lazy" src="{{img_url feature_image}}">
 							</picture>
 						</div>
 					{{/if}}
