--- a/partials/cover-tag.hbs
+++ b/partials/cover-tag.hbs
@@ -2,7 +2,7 @@
 	{{! Series Page with background image}}
 	{{#tag}}
 		{{#if feature_image}}
-			<div class="cover tag-cover series-cover" style="background-image: url({{img_url feature_image absolute="true"}});">
+			<div class="cover tag-cover series-cover lazy" style="background-image: url({{img_url feature_image absolute="true"}});">
 				<h3 class="tag-name">
 					<i class="fal fa-tag"></i> {{name}}
 				</h3>
