--- a/partials/lazyload.hbs
+++ b/partials/lazyload.hbs
@@ -1,4 +1,4 @@
-<!-- start lazy load image logic -->
+<!-- Start lazy load image logic -->
 <script>
   // Set the options to make LazyLoad self-initialize
   window.lazyLoadOptions = {
@@ -11,4 +11,4 @@
   }, false);
 </script>
 <script src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@11.0.2/dist/lazyload.min.js"></script>
-<!-- end lazy load -->
+<!-- End lazy load -->
