--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -8,9 +8,9 @@
 
   {{#if feature_image}}
       <picture class="featured-media">
-        <source media="(max-width: 600px)" srcset="{{img_url feature_image size="medium"}} 1x, {{img_url feature_image size="medium_retina"}} 2x">
-        <source srcset="{{img_url feature_image size="large"}} 1x, {{img_url feature_image size="large_retina"}} 2x">
-        <img alt="{{title}}" class="lazy" src="{{img_url feature_image}}">
+        <source alt="{{title}}" media="(max-width: 600px)" loading="lazy" srcset="{{img_url feature_image size="medium"}} 1x, {{img_url feature_image size="medium_retina"}} 2x">
+        <source alt="{{title}}" loading="lazy" srcset="{{img_url feature_image size="large"}} 1x, {{img_url feature_image size="large_retina"}} 2x">
+        <img alt="{{title}}" loading="lazy" class="lazy" src="{{img_url feature_image}}">
     </picture>
     <!--<img class="post-image"
     srcset="{{img_url feature_image size="small"}} 300w,
@@ -37,8 +37,8 @@
         {{#primary_author}}
           {{primary_author.bio}}
           {{#if profile_image}}
-            <a href="{{url}}" class="meta-item author"><img src="{{img_url profile_image}}" alt="{{name}} avatar" class="avi" size="extrasmall"><span>{{name}}</span></a>
-            <a href="{{url}}" class="author-mobile"><img src="{{img_url profile_image}}" alt="{{name}} avatar" class="avi" size="extrasmall"><div class="info"><span class="mobile-name">{{slug}}</span><span class="mobile-date">{{date format="MMM DD"}}</span></div></a>
+            <a href="{{url}}" class="meta-item author"><img src="{{img_url profile_image}}" alt="{{name}} avatar" loading="lazy" class="avi lazy"><span>{{name}}</span></a>
+            <a href="{{url}}" class="author-mobile"><img src="{{img_url profile_image}}" alt="{{name}} avatar" loading="lazy" class="avi lazy"><div class="info"><span class="mobile-name">{{slug}}</span><span class="mobile-date">{{date format="MMM DD"}}</span></div></a>
           {{else}}
             <a href="{{url}}" class="meta-item author"><i class="fal fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i><span>{{name}}</span></a>
             <a href="{{url}}" class="meta-item author-mobile"><i class="fal fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i><div class="info"><span class="mobile-name">{{slug}}</span><span class="mobile-date">{{date format="MMM DD"}}</span></div></a>
