--- a/partials/seriespreview.hbs
+++ b/partials/seriespreview.hbs
@@ -4,8 +4,8 @@
     {{#if feature_image}}
     <a class="imagewrapper" href="{{url}}">
       <picture>
-        <source media="(min-width: 1200px)" srcset="{{img_url feature_image size="medium"}} 1x, {{img_url feature_image size="medium_retina"}} 2x">
-        <img alt="{{title}}" class="lazy" src="{{img_url feature_image}}">
+        <source loading="lazy" class="lazy" media="(min-width: 1200px)" srcset="{{img_url feature_image size="medium"}} 1x, {{img_url feature_image size="medium_retina"}} 2x">
+        <img loading="lazy" class="lazy" alt="{{title}}" class="lazy" src="{{img_url feature_image}}">
     </picture>
       </a>
     {{/if}}
@@ -23,8 +23,8 @@
         {{#primary_author}}
           {{primary_author.bio}}
           {{#if profile_image}}
-            <a href="{{url}}" class="meta-item author"><img src="{{img_url profile_image}}" alt="{{name}} Author image" class="avi" data-rjs="2"><span>{{slug}}</span></a>
-            <a href="{{url}}" class="author-mobile"><img src="{{img_url profile_image}}" alt="{{name}} Author image" class="avi" data-rjs="2" /></a>
+            <a href="{{url}}" class="meta-item author"><img src="{{img_url profile_image}}" alt="{{name}} Author image" loading="lazy" class="lazy avi" data-rjs="2"><span>{{slug}}</span></a>
+            <a href="{{url}}" class="author-mobile"><img src="{{img_url profile_image}}" alt="{{name}} Author image" loading="lazy" class="lazy avi" data-rjs="2" /></a>
             <div class="info"><span class="mobile-name">{{slug}}</span>
               <!--<span class="mobile-date">{{date format="MMM DD"}}</span>-->
             </div>
