next/prev color bug

--- a/src/less/posts/nextprev.less
+++ b/src/less/posts/nextprev.less
@@ -43,8 +43,10 @@
           @media(max-width: @mobile-breakpoint) {
             margin-left: 10px;
           }
-          
-          .prev-excerpt {
+
+          .prev-excerpt,
+          .next-excerpt {
+            transition: all 0.3s ease-out;
             color: #5D6178;
           }
         }
