post footer style adjustments

--- a/src/less/global/author-card.less
+++ b/src/less/global/author-card.less
@@ -193,4 +193,9 @@
   .post-count {
     display: none !important;
   }
+
+  .author-card-small {
+    box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
+    border: 0;
+  }
 }
