--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -36,6 +36,7 @@
 @linkedin-color: #4875B4;
 @github-color: #000;
 @rss-color: #ff6501;
+@reddit-color: #ff4500;
 
 // Series Colors
 @pandas-color:#7b5195;
