--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -306,6 +306,7 @@
 					line-height: 1.2;
 					font-size: 13px;
 					font-family: @body-font;
+					transition: all .3s ease-out;
 					@media(max-width: @mobile-breakpoint) {
 						font-size: 13px;
 						font-weight: 100;
