--- a/src/less/posts/responsivetable.less
+++ b/src/less/posts/responsivetable.less
@@ -69,6 +69,7 @@ table {
   margin-bottom: 0;
   background-color: @table-bg;
   border-spacing: 0;
+  border: 0 solid rgba(255, 255, 255, 0);
 
   > tbody,
    > tfoot,
