--- a/src/less/posts/table.less
+++ b/src/less/posts/table.less
@@ -6,11 +6,12 @@
   table,
   td,
   th {
-    border: none;
+    border: 0 !important;
     max-width: 150px;
     overflow: hidden;
     text-align: left !important;
     padding: 15px 20px;
+    border: 0 solid rgba(255, 255, 255, 0);
   }
 
   td {
