--- a/src/less/posts/nextprev.less
+++ b/src/less/posts/nextprev.less
@@ -44,10 +44,9 @@
             margin-left: 10px;
           }
 
-          .prev-excerpt,
-          .next-excerpt {
+          .prev-excerpt {
             transition: all 0.3s ease-out;
-            color: #5D6178;
+            color: #5D6178 !important;
           }
         }
       }
@@ -72,6 +71,11 @@
 
           * {
             text-align: right;
+          }
+
+          .next-excerpt {
+            transition: all 0.3s ease-out;
+            color: #5D6178 !important;
           }
         }
       }
