--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -375,7 +375,7 @@ article {
 		/*  End of Protip box  */
 		/*  Start of Blockquote  */
 		blockquote {
-			color: #aac0c8;
+			color: #798286;
 			padding: 0 20px;
 			font-family: @body-font;
 			font-style: unset;
@@ -385,6 +385,7 @@ article {
 			margin: 30px auto;
 			max-width: 90%;
 			border-radius: 5px;
+			font-weight: 300;
 			border-left: 1.0em solid #DDDFE2;
 
 			& > p {
