removing medium embed widget

--- a/partials/author/author-sidebar.hbs
+++ b/partials/author/author-sidebar.hbs
@@ -2,7 +2,7 @@
 <div class="sidebar" class="{{author.slug}}">
   {{> author/widget-authorwebsite}}
 	{{> author/widget-authorgithub}}
-	{{> author/widget-medium}}
+	{{!--{{> author/widget-medium}}--}}
 	{{> author/widget-meetup}}
 	{{> author/widget-rss}}
 	{{#has slug="todd"}}
