--- a/src/less/etc/post-archive.less
+++ b/src/less/etc/post-archive.less
@@ -1,3 +1,25 @@
-.page-post-archive {
+  .main-content {
+    width: 100% !important;
+  }
 
-}
+  .postlist {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    .post-preview {
+      max-width: 29%;
+      padding: 15px;
+
+      .post-head .post-title {
+        font-size: 1.5em;
+      }
+
+      .author,
+      .date {
+        display: none !important;
+      }
+    }
+  }
