--- a/src/less/author/author.less
+++ b/src/less/author/author.less
@@ -10,7 +10,7 @@
 		}
 
 		h3 {
-			font-family: 'soleil', serif;
+			font-family: 'AvenirNextLTPro-Light', serif;
 			font-size: 1.5em;
 			margin: 10px 10px 10px 0;
 		}
