--- a/src/less/etc/series.less
+++ b/src/less/etc/series.less
@@ -254,7 +254,7 @@
 
         .post-excerpt {
           color: #153b52;
-          font-family: 'ProductSans-Regular','soleil',serif;
+          font-family: 'ProductSans-Regular','AvenirNextLTPro-Light',serif;
           font-size: 1em;
           font-weight: 100;
           line-height: 1.21;
@@ -267,7 +267,7 @@
         }
 
         .postcount {
-          font-family: 'soleil',serif;
+          font-family: 'AvenirNextLTPro-Light',serif;
           font-size: 1.3em;
         }
       }
