--- a/src/less/global/author-card.less
+++ b/src/less/global/author-card.less
@@ -24,7 +24,7 @@
   }
 
   .title {
-    font-family: 'soleil';
+    font-family: 'AvenirNextLTPro-Light';
     font-size: 1.3em;
     font-weight: 600;
     color: #326671;
@@ -111,7 +111,7 @@
 
     a {
       color: #105a6d;
-      font-family: 'soleil';
+      font-family: 'AvenirNextLTPro-Light';
 
       &:hover {
         text-decoration: none;
