--- a/src/less/global/fonts.less
+++ b/src/less/global/fonts.less
@@ -1,30 +1,11 @@
-@import (css) url("https://use.typekit.net/otx2yqz.css");
+@import (css) url("//hello.myfonts.net/count/392779");
 
-@font-face {
-  font-family: soleil,sans-serif;
-  font-weight: 700;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'soleil',sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: soleil, sans-serif;
-  font-weight: 400;
-  font-style: italic;
-}
-@font-face {
-  font-family: @body-font;
-  font-weight: 300;
-  font-style: normal;
-}
-@font-face {
-  font-family: @body-font;
-  font-weight: 600;
-  font-style: normal;
-}
+  
+@font-face {font-family: 'AvenirNextLTPro-Light';src: url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts//392779_0_0.eot');src: url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts//392779_0_0.eot?#iefix') format('embedded-opentype'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts//392779_0_0.woff2') format('woff2'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts//392779_0_0.woff') format('woff'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts//392779_0_0.ttf') format('truetype');}
+@font-face {font-family: 'AvenirNextLTPro-Medium';src: url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts//392779_1_0.eot');src: url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts//392779_1_0.eot?#iefix') format('embedded-opentype'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts//392779_1_0.woff2') format('woff2'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts//392779_1_0.woff') format('woff'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts//392779_1_0.ttf') format('truetype');}
+ 
+
+
 /* latin */
 @font-face {
   font-family: 'ProductSans-Light';
