--- a/src/less/global/global.less
+++ b/src/less/global/global.less
@@ -45,7 +45,7 @@ a {
 
 .h1,
 h1 {
-	font-family: 'ProductSans-Bold', 'soleil', sans-serif;
+	font-family: 'ProductSans-Bold', 'AvenirNextLTPro-Light', sans-serif;
 	font-size: 2.5em;
 	font-weight: 500;
 	color: @header-color;
@@ -56,21 +56,20 @@ h2,
 h4,
 h5,
 h6 {
-	font-family: 'ProductSans-Medium', 'soleil', 'soleil', serif;
+	font-family: 'ProductSans-Medium', 'AvenirNextLTPro-Light', sans-serif;
 	font-weight: 700;
 	color: @header-color;
 }
 
 h3 {
-	font-family: 'soleil', serif;
-	font-weight: 700;
+	font-family: 'AvenirNextLTPro-Medium', serif;
 	color: @header-color;
 }
 
 .h2,
 h2 {
 	font-size: 2.2em;
-	font-family: 'soleil';
+	font-family: 'AvenirNextLTPro-Light';
 	@media(max-width: @mobile-breakpoint) {
 		font-size: 2em;
 	}
@@ -90,7 +89,7 @@ h5 {
 	font-size: 1.4em;
 	font-weight: 500;
 	margin: 5px 0 0;
-	font-family: 'soleil', serif;
+	font-family: 'AvenirNextLTPro-Light', serif;
 	color: @text-color-heading;
 	line-height: 1;
 	text-align: left;
