--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -4,10 +4,10 @@
 	header
 ====================================================*/
 nav {
-	margin-bottom: 40px;
+	margin-bottom: 30px !important;
 	box-shadow: 1px 1px 3px rgba(143, 142, 179, 0.2) !important;
 	@media(max-width: @mobile-breakpoint) {
-		margin-bottom: 0;
+		margin-bottom: 0 !important;
 	}
 
 	.banner {
@@ -605,7 +605,7 @@ nav {
 		width: 226px;
 		position: absolute;
 		font-size: 1em;
-		font-family: 'soleil',sans-serif!important;
+		font-family: 'AvenirNextLTPro-Light',sans-serif!important;
 		font-weight: 200;
 		transition: 0.3s all;
 		outline: none;
@@ -630,7 +630,7 @@ nav {
 
 			a {
 				font-size: 0.8em;
-				font-family: soleil;
+				font-family: AvenirNextLTPro-Light;
 			}
 
 			&:nth-child(even) {
@@ -743,11 +743,11 @@ nav {
 
 		button {
 			border: none;
-			font-family: @body-font;
-			font-weight: 400;
+			font-family: 'AvenirNextLTPro-Medium', sans-serif;
+    	font-weight: 100;
 			font-size: 0.9em;
 			padding: 0;
-			height: 45px;
+			height: 52px;
 			background: none;
 			color: @text-color !important;
 		}
