--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -75,7 +75,7 @@
 			-webkit-line-clamp: 3;
 			-webkit-box-orient: vertical;
 			text-overflow: ellipsis;
-			font-family: 'soleil', sans-serif !important;
+			font-family: 'AvenirNextLTPro-Light', sans-serif !important;
 			line-height: 1.55;
 			font-size: 1em;
 			font-weight: 500;
@@ -89,7 +89,7 @@
 			}
 
 			a {
-				font-family: 'soleil', sans-serif !important;
+				font-family: 'AvenirNextLTPro-Light', sans-serif !important;
 				display: inline !important;
 			}
 		}
@@ -130,7 +130,7 @@
 			Line-height: 1.15;
 			margin: 0 0 10px;
 			font-weight: 900;
-			font-family: 'ProductSans-Bold', 'soleil', sans-serif;
+			font-family: 'ProductSans-Bold', 'AvenirNextLTPro-Light', sans-serif;
 			@media(max-width: 950px) {
 				font-size: 1.8em;
 			}
@@ -150,7 +150,7 @@
 					color: @secondary-color;
 				}
 				@media(max-width: @mobile-breakpoint) {
-					font-family: 'ProductSans-Bold', 'soleil', sans-serif;
+					font-family: 'ProductSans-Bold', 'AvenirNextLTPro-Light', sans-serif;
 					font-weight: 500;
 				}
 			}
@@ -436,7 +436,7 @@
 			background: @button-color;
 			box-shadow: -1px 1px 0 @button-shadow, -1px 0 0 @button-shadow, 0 1px 0 @button-shadow;
 			color: white;
-			font-family: 'ProductSans-Regular', sans-serif;
+			font-family: 'AvenirNextLTPro-Medium', sans-serif;
 			font-size: 18px;
 			font-weight: 600;
 			line-height: 1;
