--- a/src/less/global/search.less
+++ b/src/less/global/search.less
@@ -28,7 +28,7 @@ nav {
       color: white;
       padding-left: 20px;
       font-size: 1em;
-      font-family: soleil, sans-serif;
+      font-family: AvenirNextLTPro-Light, sans-serif;
       font-weight: 300;
       @media(max-width: @tablet-breakpoint) {
         width: 150px !important;
@@ -41,7 +41,7 @@ nav {
 
   #my-custom-results {
     font-size: 1em;
-    font-family: 'soleil', sans-serif !important;
+    font-family: 'AvenirNextLTPro-Light', sans-serif !important;
     font-weight: 200;
     transition: 0.3s all;
     outline: none;
@@ -129,7 +129,7 @@ nav {
     width: 226px;
     position: absolute;
     font-size: 1em;
-    font-family: 'soleil', sans-serif!important;
+    font-family: 'AvenirNextLTPro-Light', sans-serif!important;
     font-weight: 200;
     transition: 0.3s all;
     outline: none;
@@ -154,7 +154,7 @@ nav {
 
       a {
         font-size: 0.8em;
-        font-family: soleil, sans-serif;
+        font-family: AvenirNextLTPro-Light, sans-serif;
       }
 
       &:nth-child(even) {
