--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -10,7 +10,7 @@
   font-size: 14px;
 
   span {
-    font-family: soleil, sans-serif;
+    font-family: AvenirNextLTPro-Light, sans-serif;
   }
 }
 
