--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -22,7 +22,7 @@
 			-moz-transition: all 0.2s ease;
 			-o-transition: all 0.2s ease;
 			transition: all 0.2s ease;
-			font-family: 'soleil',sans-serif;
+			font-family: 'AvenirNextLTPro-Light',sans-serif;
 			font-weight: 300;
 			flex-grow: 1;
 			text-align: center;
@@ -246,6 +246,7 @@
 
 				span {
 					font-size: 14px;
+					text-transform: uppercase;
 				}
 
 				&:hover {
@@ -350,7 +351,7 @@
 			letter-spacing: 0;
 			font-size: 15px;
 			margin: 0;
-			font-family: 'soleil',sans-serif;
+			font-family: 'AvenirNextLTPro-Light',sans-serif;
 			display: flex;
 			align-items: center;
 			@media(max-width: 950px) {
@@ -478,7 +479,7 @@
 			margin-bottom: 15px;
 			letter-spacing: 1px;
 			margin-top: 0;
-			font-family: 'soleil',serif;
+			font-family: 'AvenirNextLTPro-Light',serif;
 			@media(max-width: 1040px) {
 				font-size: 1.3em !important;
 			}
@@ -500,7 +501,7 @@
 		.post-title {
 			a {
 				color: #208cad;
-				font-family: 'soleil',sans-serif;
+				font-family: 'AvenirNextLTPro-Medium',sans-serif;
 				transition: all 0.2s ease;
 
 				&:hover {
@@ -514,7 +515,7 @@
 			margin-bottom: 10px;
 			text-transform: uppercase;
 			font-size: 1.2em;
-			font-family: 'ProductSans-Medium', soleil, serif;
+			font-family: 'ProductSans-Medium', AvenirNextLTPro-Light, serif;
 			color: @header-color;
 			font-weight: 500;
 		}
@@ -525,7 +526,7 @@
 			font-weight: 500;
 			margin-bottom: 8px;
 			text-transform: uppercase;
-			font-family: 'soleil',soleil,serif;
+			font-family: 'AvenirNextLTPro-Medium',AvenirNextLTPro-Light,serif;
 			letter-spacing: 1px;
 			color: #1f5373;
 			margin-top: 0;
@@ -579,7 +580,7 @@
 				margin-bottom: 17px;
 				line-height: 1.35;
 				padding: 0 0 10px;
-				font-family: 'soleil' ,sans-serif;
+				font-family: 'AvenirNextLTPro-Light' ,sans-serif;
 
 				.post-title,
 				.single-author-name {
@@ -653,7 +654,7 @@
 		p {
 			margin-bottom: 10px;
 			font-size: 16px;
-			font-family: 'soleil',sans-serif;
+			font-family: 'AvenirNextLTPro-Light',sans-serif;
 		}
 	}
 }
