--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -62,7 +62,7 @@
 		width: -webkit-fill-available;
 		margin: 20px 0 5px;
 		display: block;
-		font-family: 'ProductSans-Bold', 'soleil', sans-serif !important;
+		font-family: 'ProductSans-Bold', 'AvenirNextLTPro-Light', sans-serif !important;
 		font-size: 2.2em;
 		font-weight: 600;
 		letter-spacing: 0;
@@ -103,7 +103,7 @@
 			margin: 40px 0 10px;
 			color: #555560;
 			line-height: 1.3;
-			font-family: 'ProductSans-Regular', sans-serif;
+			font-family: 'AvenirNextLTPro-Light', sans-serif;
 			font-weight: 100!important;
 			font-size: 2em;
 			width: 100%;
@@ -126,7 +126,8 @@
 			line-height: 1.2;
 			color: #555560;
 			margin: 40px 0 10px;
-			font-family: 'ProductSans-Regular', sans-serif;
+			font-family: 'AvenirNextLTPro-Medium', sans-serif;
+			font-weight: 300;
 			@media(max-width: @tablet-breakpoint) {
 				font-size: 1.3em;
 			}
