--- a/src/less/posts/postmeta.less
+++ b/src/less/posts/postmeta.less
@@ -27,7 +27,7 @@ header {
     }
 
     span {
-      font-family: 'soleil',sans-serif;
+      font-family: 'AvenirNextLTPro-Light',sans-serif;
       font-weight: 500;
     }
 
@@ -54,7 +54,7 @@ header {
 
       span {
         font-size: 1em;
-        font-family: 'soleil',sans-serif;
+        font-family: 'AvenirNextLTPro-Medium',sans-serif;
         @media(max-width: @mobile-breakpoint) {
           font-size: 0.9em;
         }
