--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -19,8 +19,7 @@
   h5 {
     font-size: 1.2em;
     color: #597d87 !important;
-    font-family: 'ProductSans-Regular', serif;
-    font-weight: 600;
+    font-family: 'AvenirNextLTPro-Medium', serif;
     letter-spacing: 1px;
     margin-bottom: 25px;
     padding: 0;
@@ -54,7 +53,7 @@
       opacity: 0.7;
       counter-increment: li -1;
       color: #597d87;
-      font-family: 'soleil';
+      font-family: 'AvenirNextLTPro-Light';
       font-size: 0.85em;
       padding-left: 8px;
       line-height: 1;
@@ -83,7 +82,7 @@
       &::before {
         content: "Part " counter(li, upper-roman) "." !important;
         color: #597d87;
-        font-family: 'soleil', sans-serif !important;
+        font-family: 'AvenirNextLTPro-Light', sans-serif !important;
         margin-right: 8px;
         font-size: 13px;
         @media(max-width: @mobile-breakpoint) {
@@ -107,16 +106,16 @@
   .currentPost {
     opacity: 1 !important;
     margin-left: 0;
-    font-family: 'soleil', sans-serif !important;
+    font-family: 'AvenirNextLTPro-Medium', sans-serif !important;
 
     * {
-      font-family: 'soleil', sans-serif !important;
+      font-family: 'AvenirNextLTPro-Medium', sans-serif !important;
     }
     font-size: 0.95em !important;
 
     &::before {
       margin-left: 0;
-      font-family: 'soleil', sans-serif !important;
+      font-family: 'AvenirNextLTPro-Medium', sans-serif !important;
     }
   }
 }
