--- a/src/less/posts/table.less
+++ b/src/less/posts/table.less
@@ -62,7 +62,7 @@
         }
 
         &::before {
-          font-family: 'soleil', sans-serif !important;
+          font-family: 'AvenirNextLTPro-Light', sans-serif !important;
         }
       }
     }
@@ -148,7 +148,7 @@
         width: -moz-available;
         text-overflow: ellipsis;
         white-space: nowrap;
-        font-family: soleil, sans-serif;
+        font-family: AvenirNextLTPro-Light, sans-serif;
       }
 
       thead {
@@ -240,7 +240,7 @@
 
   .dataframe thead th {
     text-align: center !important;
-    font-family: 'soleil', sans-serif !important;
+    font-family: 'AvenirNextLTPro-Light', sans-serif !important;
   }
 
   .dataframe tbody tr th:only-of-type {
