--- a/src/less/etc/applyform.less
+++ b/src/less/etc/applyform.less
@@ -83,7 +83,7 @@
 
     input,
     textarea {
-      font-family: "soleil", sans-serif;
+      font-family: "AvenirNextLTPro-Light", sans-serif;
       outline: 0;
       background: #f2f2f2;
       width: 100%;
@@ -105,7 +105,7 @@
         &::placeholder {
           color: #72859d;
           opacity: 0.4;
-          font-family: 'soleil', sans-serif !important;
+          font-family: 'AvenirNextLTPro-Light', sans-serif !important;
         }
 
         &::after {
@@ -245,7 +245,7 @@
     }
 
     button {
-      font-family: "soleil", sans-serif;
+      font-family: "AvenirNextLTPro-Light", sans-serif;
       text-transform: uppercase;
       outline: 0;
       background: @theme-color !important;
