--- a/src/less/etc/transaction.less
+++ b/src/less/etc/transaction.less
@@ -12,5 +12,5 @@ h1 {
 
 a,
 p {
-  font-family: 'soleil', sans-serif !important;
+  font-family: 'AvenirNextLTPro-Light', sans-serif !important;
 }
