--- a/src/less/pages/tag-page.less
+++ b/src/less/pages/tag-page.less
@@ -139,7 +139,7 @@
         .btn {
           padding: 12px 20px;
           font-size: 16px;
-          font-family: soleil,sans-serif;
+          font-family: AvenirNextLTPro-Light,sans-serif;
 
           a {
             line-height: 1;
