--- a/src/less/projects/kanban.less
+++ b/src/less/projects/kanban.less
@@ -17,7 +17,7 @@
   }
 
   h3 {
-    font-family: 'soleil',sans-serif;
+    font-family: 'AvenirNextLTPro-Light',sans-serif;
     margin-bottom: 0;
     font-size: 1.4em;
   }
@@ -276,7 +276,7 @@
         padding-bottom: 0;
         position: relative;
         width: 89%;
-        font-family: 'soleil', sans-serif !important;
+        font-family: 'AvenirNextLTPro-Light', sans-serif !important;
         font-weight: 400;
       }
 
@@ -314,7 +314,7 @@
             font-size: 0.9em;
             line-height: 1.2;
             text-transform: capitalize;
-            font-family: 'soleil', sans-serif !important;
+            font-family: 'AvenirNextLTPro-Light', sans-serif !important;
             color: #3c3d46;
             margin: 2px 0 20px;
             width: 97%;
@@ -442,7 +442,7 @@
               span {
                 color: #242d3e;
                 font-size: 11px;
-                font-family: 'soleil', sans-serif !important;
+                font-family: 'AvenirNextLTPro-Light', sans-serif !important;
                 font-weight: 300;
                 margin-right: 0;
                 line-height: 1;
@@ -456,7 +456,7 @@
       .count {
         color: #ababab;
         font-size: 14px;
-        font-family: 'soleil',sans-serif;
+        font-family: 'AvenirNextLTPro-Light',sans-serif;
         bottom: 0;
         padding: 4px;
         float: right;
