--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -159,8 +159,7 @@
 		a {
 			color: @theme-color;
 			transition: all 0.2s ease-out;
-			font-family: @body-font;
-			font-weight: 600;
+			font-family: 'AvenirNextLTPro-Medium', sans-serif;
 			@media(max-width: @mobile-breakpoint) {
 				white-space: nowrap;
 				overflow: hidden;
