--- a/src/less/global/global.less
+++ b/src/less/global/global.less
@@ -31,8 +31,7 @@ section {
 }
 
 strong {
-	font-family: @body-font;
-	font-weight: 500;
+	font-family: 'AvenirNextLTPro-Medium', sans-serif;
 }
 
 a {
